experimental/ir/testdata/syntax/proto2_unquoted.proto.stderr.txt
error: the value of a `syntax` declaration must be a string literal
  --> testdata/syntax/proto2_unquoted.proto:2:10
   |
 2 | syntax = proto2;
   |          ^^^^^^
  help: add quotes to make this a string literal
   |
 2 | syntax = "proto2";
   |          +      +

encountered 1 error
